# audio-card-oscilloscope

./: README.md  gui.py  pyproject.toml
