[tool.poetry]
name = "audio-card-oscilloscope"
version = "0.1.0"
description = ""
authors = ["nahue-passano <passano43632@estudiantes.untref.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
pyqt5 = "^5.15.9"
numpy = "1.20"
matplotlib = "^3.7.2"
sounddevice = "^0.4.6"
pyaudio = "^0.2.13"
streamlit = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
